--- a/home/index.html
+++ b/home/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>VirtualBar</title>
     </head>
     <body>
+        <nav>
 
+        </nav>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
     <script>
-        
+
     </script>
 </html>
