--- a/home/index.html
+++ b/home/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <title>VirtualBar</title>
+        <link rel="stylesheet"/>
     </head>
     <body>
         <nav>
-
+            <div>Logo</div>
+            <div>Links</div>
+            <div>buttons</div>
         </nav>
         <main>
 
